--- a/src/blocks/search-form.pug
+++ b/src/blocks/search-form.pug
@@ -1,2 +1,4 @@
 .search-form
-    h1 search form
+    input.form-input
+    button#searchButon.button.primary-button(type="submit") Buscar
+    a.button.invert-button(href="#") Guardar Busqueda
