--- a/src/index.pug
+++ b/src/index.pug
@@ -5,25 +5,31 @@ html(lang="es")
         meta(charset="utf-8")
         meta(viewport="width=device-width, initial-scale=1.0")
         link(href="https://fonts.googleapis.com/css?family=Proxima+Nova", rel="stylesheet", type="text/css")
-        link(href="/vendor/pure/pure-min.css", rel="stylesheet")
+        link(href="/vendor/normalize-css/normalize.css", rel="stylesheet")
+        link(href="/vendor/awesomplete/awesomplete.css" rel="stylesheet")
         link(href="/styles/index.css", rel="stylesheet")
 
     body
-        .app.pure-g
-            header.pure-u-1
-                .pure-u-1-3
-                    h1.logo Finder challenge!
-                .pure-u-7-24
+        .app
+            header.content-head
+                .page-logo
+                    h1.logo Finder challenge
+                nav.navigation
                     include blocks/search-form
-                .pure-u-1-3
-            aside.filters.pure-u-1-4
-            content.pure-u-3-4
-            footer.pure-u-1
+            main.content-body
+                aside.filters
+                    include blocks/aside
+                content.grid
+                    ul#gridContent
+            footer
+                include blocks/footer
 
         //- third party libraries
         script(src="/vendor/underscore/underscore-min.js")
+        script(src="/vendor/awesomplete/awesomplete.min.js")
 
         //- app scripts self
         script(src="/scripts/global.js")
         script(src="/scripts/search-form.js")
+        script(src="/scripts/grid.js")
         script(src="/scripts/app.js")
