--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -237,8 +237,19 @@ body {
     width: 33.33%;
   }
 }
-.search-form {
+.navigation {
   margin-top: 30px;
+  display: flex;
+}
+.navigation .button:first-child {
+  margin-left: 0px;
+}
+@media (min-width: 877px) {
+  .navigation {
+    margin-top: 0px;
+  }
+}
+.search-form {
   display: flex;
   flex-wrap: wrap;
 }
