--- a/src/styles/blocks/search-form.styl
+++ b/src/styles/blocks/search-form.styl
@@ -1,5 +1,14 @@
-.search-form
+.navigation
     margin-top 30px
+    display: flex
+
+    .button:first-child
+        margin-left: 0px
+
+    @media(min-width: 877px)
+        margin-top: 0px
+
+.search-form
     display: flex;
     flex-wrap: wrap
 
